--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "openclaw-manager"
 version = "0.0.5"
-description = "OpenClaw 跨平台管理工具"
+description = "OpenClaw Cross-Platform Manager"
 authors = ["OpenClaw Team"]
 edition = "2021"
 
@@ -22,6 +22,7 @@ dirs = "5"
 thiserror = "1"
 log = "0.4"
 env_logger = "0.11"
+serde_yaml = "0.9"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.26"
